--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 
     <title>HomeStore_EC-Web: Articulos de Decoracion, Bazar y Hogar a precios accesibles. Bienvenidos!</title>
-    <link rel="shortcut icon" href="./local/logo.jpg">
+    <link rel="shortcut icon" href="./img/logo.jpg">
 </head>
 
 
@@ -26,6 +26,7 @@
         <aside>
             <header>
                 <h1 class="logo">HomeStore</h1>
+                <img src="./img/logo.jpg" alt="">
             </header>
             <nav>
                 <ul class="menu">
